[build-system]
requires = [
  "setuptools",
  "setuptools_scm>=6.2",
  "wheel",
  "cython>=3.0",
  "numpy>=2.0.0rc1"
]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
# E733: do not use bare `except`
ignore = [
    "E402",
    "E501",
    "E731",
    "E722",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.cibuildwheel]
build-verbosity = 1
skip = [
    "cp3{8,9}-*", # unsupported versions
    "cp3*t-*", # free-threading is not supported
    "cp314-*", # missing support from cartopy
    "*musllinux*", # missing support from netCDF4
]
test-requires = [
    "pytest",
    "pytest-mpl",
]
test-command = "pytest --mpl {project}/tests"
environment = { PIP_ONLY_BINARY = ":all:" }

[tool.cibuildwheel.linux]
archs = "x86_64"

[tool.cibuildwheel.windows]
archs = "auto64"
